--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4</version>
+		<version>2.3.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.demo</groupId>
 	<artifactId>hr-worker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hr-worker</name>
-	<description>Human Resources - worker microservice</description>
+	<description>Human Resources - Worker microservice</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
