--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=hr-payroll
 
 server.port=8101
 server.servlet.context-path=/rest
+
+hr-worker.host=http://localhost:8001/rest
