--- a/hr-gateway-zuul/src/main/resources/application.properties
+++ b/hr-gateway-zuul/src/main/resources/application.properties
@@ -13,3 +13,6 @@ zuul.routes.worker.path=/rest/hr-worker/**
 
 zuul.routes.payroll.service-id=hr-payroll
 zuul.routes.payroll.path=/rest/hr-payroll/**
+
+zuul.routes.user.service-id=hr-user
+zuul.routes.user.path=/rest/hr-user/**
