--- a/hr-gateway-zuul/src/main/resources/application.properties
+++ b/hr-gateway-zuul/src/main/resources/application.properties
@@ -16,3 +16,6 @@ zuul.routes.payroll.path=/rest/hr-payroll/**
 
 zuul.routes.user.service-id=hr-user
 zuul.routes.user.path=/rest/hr-user/**
+
+zuul.routes.oauth.service-id=hr-oauth
+zuul.routes.oauth.path=/rest/hr-oauth/**
