--- a/hr-gateway-zuul/src/main/resources/application.properties
+++ b/hr-gateway-zuul/src/main/resources/application.properties
@@ -18,4 +18,5 @@ zuul.routes.user.service-id=hr-user
 zuul.routes.user.path=/rest/hr-user/**
 
 zuul.routes.oauth.service-id=hr-oauth
-zuul.routes.oauth.path=/rest/hr-oauth/**
+zuul.routes.oauth.path=/hr-oauth/**
+zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
